# Agent-CFD-program

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pyproject.toml  run-aero-agent.bat
apps/gui/: index.html  package.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
apps/gui/src/: App.tsx  styles.css
apps/gui/src/components/common/: EmptyState.tsx  NoticeBanner.tsx  StatusBadge.tsx
apps/gui/src/components/composer/: ComposerBar.tsx
apps/gui/src/components/inspector/: InspectorDrawer.tsx
apps/gui/src/components/shell/: AppShell.tsx
apps/gui/src/components/sidebar/: Sidebar.tsx
apps/gui/src/components/thread/: DraftWorkspaceView.tsx  EmptySelectionState.tsx  PreflightReviewBlock.tsx  ReportsView.tsx  SessionActivityThread.tsx  SessionResultSummary.tsx  SettingsView.tsx  WorkspaceThread.tsx
apps/gui/src/lib/: api.ts  mock.ts  types.ts
apps/gui/src/store/: ShellProvider.tsx  diagnostics.ts  selectors.ts  shellReducer.ts  shellTypes.ts  useComposerActions.ts  useDiagnostics.ts  useRouteSync.ts  useSelectedJobStream.ts  useSessionMutations.ts  useSessionQueries.ts  useShellBoot.ts
apps/gui/src/styles/: forms.css  inspector.css  shell.css  thread.css  tokens.css
docs/: ARCHITECTURE.md  PLANS.md  VALIDATION.md
scripts/: start-api.bat  start-api.ps1  start-app.bat  start-gui.bat  start-gui.ps1  start-workbench.bat  test-api.bat  test-api.ps1
services/job_runner/: pyproject.toml
services/job_runner/aero_agent_job_runner/: __init__.py  contracts.py  service.py
services/local_api/: pyproject.toml
services/local_api/aero_agent_api/: __init__.py  __main__.py  dependencies.py  events.py  main.py  models.py  repository.py  settings.py
services/local_api/tests/: test_api.py
services/local_api/tests/fixtures/: tetra.stl
