[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aero-agent-local-api"
version = "0.1.0"
description = "Local FastAPI control plane for aerodynamic analysis jobs"
requires-python = ">=3.12"
dependencies = [
  "aero-agent-install-manager>=0.1.0",
  "aero-agent-provider-codex>=0.1.0",
  "aero-agent-provider-openai>=0.1.0",
  "fastapi>=0.115.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.6.0",
  "python-multipart>=0.0.9",
  "sse-starlette>=2.1.3",
  "uvicorn>=0.32.0",
]
 
[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["aero_agent_api*"]
